--- a/Dafarras/index.html
+++ b/Dafarras/index.html
@@ -7,10 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav></nav>
+    <header class="navbar">
+        <nav> <h1>Dafarra's Burguer</h1></nav>
     </header>
-    <main></main>
+   
+
+    <section class="BoxM">
+        <div class="Item">
+        </div>
+    </section>
+
+<section class="BoxM">
+        <div class="Item">
+        </div>
+    </section>
+
+
+<section class="BoxM">
+    <div class="Item">
+    </div>
+</section>
+
+
+<section class="BoxM">
+    <div class="Item">
+    </div>
+</section>
+
+
     <footer></footer>
 </body>
 </html>
