--- a/Dafarras/index.html
+++ b/Dafarras/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Daffara's Burger</title>
 </head>
+
 <body>
-    <header class="navbar">
-        <nav> <h1>Dafarra's Burguer</h1></nav>
+    <header>
+        <div class="header-container">
+            <img class= "logo" src="img/gordosafado2_logo.png" alt="logo">  
+                <div class="header-text">
+                    <h1>Dafarra's Burguer</h1>
+                </div>          
+        </div>
     </header>
-   
 
     <section class="BoxM">
         <div class="Item">
