--- a/Dafarras/index.html
+++ b/Dafarras/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grid.html">
     <title>Daffara's Burger</title>
 </head>
 
@@ -17,29 +18,65 @@
         </div>
     </header>
 
+    <section class="lanches-unitarios">
+        <h2>Lanches</h2>
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>X-Daffara</h3>
+                    <img class="lanche" src="img/x_daffara.jpeg" alt="lanche">
+                </div>
+            </section>
+
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>Daffarinha</h3>
+                    <img class="lanche" src="img/daffarinha.jpeg" alt="lanche">
+                </div>
+            </section>
+
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>Daffera</h3>
+                    <img class="lanche" src="img/daffera.jpeg" alt="lanche">
+                </div>
+            </section>
+    
     <section class="BoxM">
         <div class="Item">
+            <h3>Dafofo</h3>
+                <img class="lanche" src="img/dafofo.jpeg" alt="lanche">
         </div>
     </section>
+</section>
 
-<section class="BoxM">
-        <div class="Item">
-        </div>
+    <section class="combos">
+        <h2>Combos</h2>
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>Combo São Paulo</h3>
+                    <img class="lanche" src="img/combo_saopaulo.jpeg" alt="lanche">
+                </div>
+            </section>
+
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>Combo 3 Diplomas</h3>
+                    <img class="lanche" src="img/combo_3diplomas.jpeg" alt="lanche">
+                </div>
+            </section>
+
+            <section class="BoxM">
+                <div class="Item">
+                    <h3>Combo Kids</h3>
+                    <img class="lanche" src="img/combo_kids.jpeg" alt="lanche">
+                </div>
+            </section>
     </section>
+  
+    <footer>
+        <div class="rodape">
 
-
-<section class="BoxM">
-    <div class="Item">
-    </div>
-</section>
-
-
-<section class="BoxM">
-    <div class="Item">
-    </div>
-</section>
-
-
-    <footer></footer>
+        </div>
+    </footer>
 </body>
 </html>
