--- a/Dafarras/index.html
+++ b/Dafarras/index.html
@@ -10,46 +10,66 @@
 
 <body>
     <header>
-        <div class="header-container">
+        <div id="header-container">
             <img class= "logo" src="img/gordosafado2_logo.png" alt="logo">  
                 <div class="header-text">
                     <h1>Dafarra's Burguer</h1>
-                </div>          
+                </div>         
         </div>
     </header>
 
-    <section class="lanches-unitarios">
+    <div class="menu">
+        <ul>
+            <li><a href="#header-container">INÍCIO</a></li>
+            <li><a href="#lanches-unitarios">LANCHES</a></li>
+            <li><a href="#combos">COMBOS</a></li>
+        </ul>
+    </div> 
+
+<section class="colunas">
+
+    <div class="coluna1">
+        <p>olá</p>
+    </div>
+
+    <div class="produtos">
+    <section id="lanches-unitarios">
         <h2>Lanches</h2>
-            <section class="BoxM">
+            <div class="BoxM">                
                 <div class="Item">
                     <h3>X-Daffara</h3>
                     <img class="lanche" src="img/x_daffara.jpeg" alt="lanche">
+                    <div class="texto">
+                        <p>2 fatias de pão tostado, 1 ovo frito, 1 carne de hambúrguer 90g, picles, queijo, bacon em cubos, calabresa e alface.</p>
+                        <p class="preco">R$00,00</p>
+                        <button>Compre aqui!</button>
+                    </div>
                 </div>
-            </section>
+            </div>
 
-            <section class="BoxM">
+            <div class="BoxM">
                 <div class="Item">
                     <h3>Daffarinha</h3>
                     <img class="lanche" src="img/daffarinha.jpeg" alt="lanche">
                 </div>
-            </section>
+            </div>
 
-            <section class="BoxM">
+            <div class="BoxM">
                 <div class="Item">
                     <h3>Daffera</h3>
                     <img class="lanche" src="img/daffera.jpeg" alt="lanche">
                 </div>
-            </section>
+            </div>
     
-    <section class="BoxM">
-        <div class="Item">
-            <h3>Dafofo</h3>
+        <div class="BoxM">
+            <div class="Item">
+                <h3>Dafofo</h3>
                 <img class="lanche" src="img/dafofo.jpeg" alt="lanche">
+            </div>
         </div>
     </section>
-</section>
 
-    <section class="combos">
+        <section id="combos">
         <h2>Combos</h2>
             <section class="BoxM">
                 <div class="Item">
@@ -72,7 +92,13 @@
                 </div>
             </section>
     </section>
-  
+    </div>
+
+    <div class="coluna2">
+        <p>tchau</p>
+    </div>
+</section>
+    
     <footer>
         <div class="rodape">
 
