--- a/index.html
+++ b/index.html
@@ -140,18 +140,9 @@
     </div>
 </section>
 
-<section id="extras">
-        <div class="BoxF">
-            <h2>Sobre</h2>
-            <div class="conteudos-extras">
-                <p>oiiiii</p>
-            </div>
-        </div>
-
-    <div class="valores">
-        <h3>Valores</h3>
-    </div>
-</section>
+    <section id="sobre">
+        
+    </section>
     
     <footer>
         <div class="rodape">
