--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="colunas">
 
     <div class="coluna1">
-        <p>olá</p>
+        <img src="img/desconto.png" alt="desconto">
     </div>
 
     <div class="conteudo">
@@ -134,7 +134,7 @@
     </div>
 
     <div class="coluna2">
-        <p>tchau</p>
+        <img src="img/desconto.png" alt="desconto">
     </div>
 </section>
 
@@ -156,7 +156,7 @@
         <div class="BoxF">
             <div class="valores">
                 <div class="texto2">
-                    <p class="descricao2">not nice bro</p> 
+                    <p class="descricao2">eba valores do daffarinha</p> 
                 </div>
             </div>
         </div>
