--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="colunas">
 
     <div class="coluna1">
-        <img src="img/desconto.png" alt="desconto">
+        <img src="img/desconto.png.png" alt="desconto">
     </div>
 
     <div class="conteudo">
@@ -134,7 +134,7 @@
     </div>
 
     <div class="coluna2">
-        <img src="img/desconto.png" alt="desconto">
+        <img src="img/desconto.png.png" alt="desconto">
     </div>
 </section>
 
@@ -156,7 +156,12 @@
         <div class="BoxF">
             <div class="valores">
                 <div class="texto2">
-                    <p class="descricao2">eba valores do daffarinha</p> 
+                    <p class="descricao2">Qualidade: Ingredientes frescos e selecionados para entregar o melhor sabor.</p> 
+                    <p class="descricao2">Paixão pelo o que fazemos: Cada lanche é preparado com dedicação e amor.</p>
+                    <p class="descricao2">Atendimento com respeito e cordialidade: Valorizamos cada cliente como parte da nossa história.</p>
+                    <p class="descricao2">Inovação: Buscamos sempre criar nossas combinações e melhorar nossos processos.</p>
+                    <p class="descricao2">Compromisso com higiene e segurança alimentar: Seguimos rigorosamente os padrões sanitários.</p>
+                    <p class="descricao2">Valorização local: Valorizamos fornecedores e talentos da nossa comunidade local.</p>
                 </div>
             </div>
         </div>
