--- a/pias-main/index.html
+++ b/pias-main/index.html
@@ -32,11 +32,6 @@
     <div class="coluna1">
         <div class="container" id="img">
             <img src="img/desconto.png.png" alt="desconto">
-            <img src="img/desconto2.png.png" alt="desconto">
-            <img src="img/desconto3.png.png" alt="desconto">
-            <img src="img/desconto4.png.png" alt="desconto">
-            <img src="img/desconto5.png.png" alt="desconto">
-            <img src="img/desconto6.png.png" alt="desconto">
         </div>
     </div>
 
@@ -178,7 +173,8 @@
     
     <footer>
         <div class="rodape">
-            
+            <a href="https://www.google.com/search?q=hamster+espirrando+youtube&sca_esv=6b0b75a31f80727a&udm=7&biw=1920&bih=960&ei=0MUAaYmtK5b35OUP-bzxuAc&ved=0ahUKEwiJ1a_TgMeQAxWWO7kGHXleHHcQ4dUDCBE&uact=5&oq=hamster+espirrando+youtube&gs_lp=EhZnd3Mtd2l6LW1vZGVsZXNzLXZpZGVvIhpoYW1zdGVyIGVzcGlycmFuZG8geW91dHViZTIFECEYoAEyBRAhGJ8FSOIdUMYIWLAccAJ4AJABAJgBlAGgAboKqgEEMC4xMLgBA8gBAPgBAZgCC6AC_gnCAgYQABgHGB7CAgUQABiABMICBhAAGAgYHsICBRAAGO8FwgIIEAAYgAQYogTCAgYQABgWGB6YAwCIBgGSBwMyLjmgB4kgsgcDMC45uAfwCcIHBTAuNy40yAci&sclient=gws-wiz-modeless-video#fpstate=ive&vld=cid:a50e8398,vid:DojybQvnX9U,st:0"><img class="insta" src="img/insta.png" alt="insta"> </a>
+            <p class="descricao">Daffara's Burger: Rua Carlos Welter, 470 - Vila Yolanda | Foz do Iguaçu - PR</p>
         </div>
     </footer>
 </body>
