--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     
     <footer>
         <div class="rodape">
-            <a href="https://www.google.com/search?q=hamster+espirrando+youtube&sca_esv=6b0b75a31f80727a&udm=7&biw=1920&bih=960&ei=0MUAaYmtK5b35OUP-bzxuAc&ved=0ahUKEwiJ1a_TgMeQAxWWO7kGHXleHHcQ4dUDCBE&uact=5&oq=hamster+espirrando+youtube&gs_lp=EhZnd3Mtd2l6LW1vZGVsZXNzLXZpZGVvIhpoYW1zdGVyIGVzcGlycmFuZG8geW91dHViZTIFECEYoAEyBRAhGJ8FSOIdUMYIWLAccAJ4AJABAJgBlAGgAboKqgEEMC4xMLgBA8gBAPgBAZgCC6AC_gnCAgYQABgHGB7CAgUQABiABMICBhAAGAgYHsICBRAAGO8FwgIIEAAYgAQYogTCAgYQABgWGB6YAwCIBgGSBwMyLjmgB4kgsgcDMC45uAfwCcIHBTAuNy40yAci&sclient=gws-wiz-modeless-video#fpstate=ive&vld=cid:a50e8398,vid:DojybQvnX9U,st:0"><img class="insta" src="img/insta.png" alt="insta"> </a>
+            <a href="https://www.instagram.com/daffarasburguers.ofc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img class="insta" src="img/insta.png" alt="insta"></a>
             <p class="descricao">Daffara's Burger: Rua Carlos Welter, 470 - Vila Yolanda | Foz do Iguaçu - PR</p>
         </div>
     </footer>
