--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <img class="produtos" src="img/daffera.jpeg" alt="lanche">
                     <div class="texto">
                         <p class="descricao">3 fatias de pão tostado, 2 carnes de hambúrguer 100g, picles americano, queijo parmesão ou cheddar, alface e bacon em cubos.</p>
-                        <p class="preco">R$25,90</p>
+                        <p class="preco2">R$25,90</p>
                         <button>Compre aqui!</button>
                     </div>
                 </div>
