--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="texto">
                         <p class="descricao">2 fatias de pão tostado, 1 ovo frito, 1 carne de hambúrguer 90g, picles, queijo, bacon em cubos, calabresa e alface.</p>
                         <p class="preco">R$22,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     <div class="texto">
                         <p class="descricao">2 fatias de pão tostado, carne de hambúrguer 70g, queijo, alface e tomate.</p>
                         <p class="preco">R$16,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                     <div class="texto">
                         <p class="descricao">3 fatias de pão tostado, 2 carnes de hambúrguer 100g, picles americano, queijo parmesão ou cheddar, alface e bacon em cubos.</p>
                         <p class="preco2">R$25,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div class="texto">
                         <p class="descricao">2 fatias de pão brioche, 1 carne de 80g, cebola caramelizada, queijo, molho e alface americana.</p>
                         <p class="preco">R$19,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <div class="texto">
                         <p class="descricao">Daffera, porção de batata frita 350g, refrigerante 1L ou suco jarra.</p>
                         <p class="preco">R$44,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <div class="texto">
                         <p class="descricao">Daffarinha, porção de batata frita 100g, refrigerante lata ou suco copo.</p>
                         <p class="preco">R$29,00</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     <div class="texto">
                         <p class="descricao">X-Daffara, porção de batata frita 150g, refrigerante 600ml ou suco copo.</p>
                         <p class="preco">R$34,90</p>
-                        <button>Compre aqui!</button>
+                        <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
