--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="header-container">
             <img class= "logo" src="img/gordosafado2_logo.png" alt="logo">  
                 <div class="header-text">
-                    <h1>Dafarra's Burguer</h1>
+                    <h1>Daffara's Burguer</h1>
                 </div>         
         </div>
     </header>
@@ -52,7 +52,7 @@
                     <div class="texto">
                         <p class="descricao">2 fatias de pão tostado, 1 ovo frito, 1 carne de hambúrguer 90g, picles, queijo, bacon em cubos, calabresa e alface.</p>
                         <p class="preco">R$22,90</p>
-                        <a href="" class="button">Compre aqui!</a>
+                        <a href="compras.html" class="button">Compre aqui!</a>
                     </div>
                 </div>
             </div>
