--- a/compras.html
+++ b/compras.html
@@ -20,7 +20,7 @@
 
     <div class="menu">
         <ul>
-            <li><a href="index.html">INÍCIO</a></li>
+            <li><a href="index.html">VOLTAR</a></li>
         </ul>
     </div>
 
@@ -28,14 +28,49 @@
         <h2>Lanches</h2>
             <div class="BoxM">                
                 <div class="Item">
-                <h3>X-Daffara</h3>
-                <img class="produtos" src="img/x_daffara.jpeg" alt="lanche">
-                <div class="texto">
-                    <p class="descricao">2 fatias de pão tostado, 1 ovo frito, 1 carne de hambúrguer 90g, picles, queijo, bacon em cubos, calabresa e alface.</p>
-                    <p class="preco">R$22,90</p>
-                    <a href="compras.html" class="button">Compre aqui!</a>
+                    <h3>X-Daffara</h3>
+                    <img class="produtos" src="img/x_daffara.jpeg" alt="lanche">
+                    <div class="texto">
+                        <p class="descricao">2 fatias de pão tostado, 1 ovo frito, 1 carne de hambúrguer 90g, picles, queijo, bacon em cubos, calabresa e alface.</p>
+                        <p class="preco4">R$22,90</p>
+                    </div>
                 </div>
             </div>
+
+            <div class="BoxM">
+                <div class="Item2">
+                    <h3>Deseja remover algum item?</h3>
+                    <div class="texto-compras">
+                        <a href="#" class="button2">Ovo frito</a>
+                        <a href="#" class="button2">Picles</a>
+                        <a href="#" class="button2">Bacon</a>
+                        <a href="#" class="button2">Calabresa</a>
+                        <a href="#" class="button2">Alface</a>
+                        <a href="#" class="button2">Tomate</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="BoxM">
+                <div class="Item2">
+                    <h3>Deseja adicionar algum item?</h3>
+                    <div class="texto-compras">
+                        <a href="#" class="button2">Ovo frito</a>
+                        <a href="#" class="button2">Picles</a>
+                        <a href="#" class="button2">Bacon</a>
+                        <a href="#" class="button2">Calabresa</a>
+                        <a href="#" class="button2">Alface</a>
+                        <a href="#" class="button2">Tomate</a>
+                    </div>
+                </div>
+            </div>
+
+        <div class="BoxM2">
+            <div class="Item3">
+                <div class="texto-compras2">
+                    <a href="index.html" class="button3">Finalizar pedido!</a> 
+                    <a href="index.html" class="button">Cancelar</a>
+                </div>
         </div>
     </section>
 
