--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img class="produtos" src="img/daffarinha.jpeg" alt="lanche">
                     <div class="texto">
                         <p class="descricao">2 fatias de pão tostado, carne de hambúrguer 70g, queijo, alface e tomate.</p>
-                        <p class="preco">R$16,90</p>
+                        <p class="preco2">R$16,90</p>
                         <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <img class="produtos" src="img/daffera.jpeg" alt="lanche">
                     <div class="texto">
                         <p class="descricao">3 fatias de pão tostado, 2 carnes de hambúrguer 100g, picles americano, queijo parmesão ou cheddar, alface e bacon em cubos.</p>
-                        <p class="preco2">R$25,90</p>
+                        <p class="preco3">R$25,90</p>
                         <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <img class="produtos" src="img/combo_3diplomas.jpeg" alt="combo">
                     <div class="texto">
                         <p class="descricao">Daffera, porção de batata frita 350g, refrigerante 1L ou suco jarra.</p>
-                        <p class="preco">R$44,90</p>
+                        <p class="preco2">R$44,90</p>
                         <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <img class="produtos" src="img/combo_kids.jpeg" alt="combo">
                     <div class="texto">
                         <p class="descricao">Daffarinha, porção de batata frita 100g, refrigerante lata ou suco copo.</p>
-                        <p class="preco">R$29,00</p>
+                        <p class="preco2">R$29,00</p>
                         <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <img class="produtos" src="img/combo_saopaulo.jpeg" alt="combo">
                     <div class="texto">
                         <p class="descricao">X-Daffara, porção de batata frita 150g, refrigerante 600ml ou suco copo.</p>
-                        <p class="preco">R$34,90</p>
+                        <p class="preco2">R$34,90</p>
                         <a href="" class="button">Compre aqui!</a>
                     </div>
                 </div>
@@ -192,6 +192,9 @@
             <a href="https://www.instagram.com/daffarasburguers.ofc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img class="insta" src="img/insta.png" alt="insta"></a>
             <p class="descricao">Peça no Delivery: (45) 99803-5494</p>
             <a class="info" href="https://www.google.com/maps/place/R.+Carlos+Welter,+470+-+Vila+Yolanda,+Foz+do+Igua%C3%A7u+-+PR,+85853-290/@-25.5537825,-54.5640197,17z/data=!3m1!4b1!4m6!3m5!1s0x94f69109c08444b5:0xa890d37ee16d125c!8m2!3d-25.5537886!4d-54.5640982!16s%2Fg%2F11bw3hs7wp?entry=ttu&g_ep=EgoyMDI1MTExNi4wIKXMDSoASAFQAw%3D%3D">Daffara's Burger: Rua Carlos Welter, 470 - Vila Yolanda</a>
+            <img class="wagner" src="img/wagner&sisters.png" alt="">
+            
+            <img src="img/ccm.png" alt="">
         </div>
     </footer>
 </body>
