--- a/compras.html
+++ b/compras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="compras.css">
     <script src="script.js" defer></script>
     <title>Daffara's Burger</title>
 </head>
@@ -41,12 +41,14 @@
                 <div class="Item2">
                     <h3>Deseja remover algum item?</h3>
                     <div class="texto-compras">
-                        <a href="#" class="button2">Ovo frito</a>
-                        <a href="#" class="button2">Picles</a>
-                        <a href="#" class="button2">Bacon</a>
-                        <a href="#" class="button2">Calabresa</a>
-                        <a href="#" class="button2">Alface</a>
-                        <a href="#" class="button2">Tomate</a>
+                        <a href="#" class="button4">Ovo frito</a>
+                        <a href="#" class="button4">Picles</a>
+                        <a href="#" class="button4">Bacon</a>
+                        <a href="#" class="button4">Calabresa</a>
+                        <a href="#" class="button4">Alface</a>
+                        <a href="#" class="button4">Tomate</a>
+
+                        <p id="contador2">Itens removidos: 0</p>
                     </div>
                 </div>
             </div>
@@ -54,20 +56,23 @@
             <div class="BoxM">
                 <div class="Item2">
                     <h3>Deseja adicionar algum item?</h3>
-                    <div class="texto-compras">
-                        <a href="#" class="button2">Ovo frito</a>
-                        <a href="#" class="button2">Picles</a>
-                        <a href="#" class="button2">Bacon</a>
-                        <a href="#" class="button2">Calabresa</a>
-                        <a href="#" class="button2">Alface</a>
-                        <a href="#" class="button2">Tomate</a>
+
+                    <div class="texto-compras2">
+                        <button class="button2">Ovo frito</button>
+                        <button class="button2">Picles</button>
+                        <button class="button2">Bacon</button>
+                        <button class="button2">Calabresa</button>
+                        <button class="button2">Alface</button>
+                        <button class="button2">Tomate</button>
+
+                        <p id="contador">Itens adicionados: 0</p>
                     </div>
                 </div>
             </div>
 
         <div class="BoxM2">
             <div class="Item3">
-                <div class="texto-compras2">
+                <div class="texto-compras3">
                     <a href="index.html" class="button3">Finalizar pedido!</a> 
                     <a href="index.html" class="button">Cancelar</a>
                 </div>
