--- a/compras.html
+++ b/compras.html
@@ -55,7 +55,7 @@
 
             <div class="BoxM">
                 <div class="Item2">
-                    <h3>Deseja adicionar algum item?</h3>
+                    <h3>Deseja adicionar algum item por R$1,90 cada?</h3>
 
                     <div class="texto-compras2">
                         <button class="button2">Ovo frito</button>
@@ -73,6 +73,7 @@
         <div class="BoxM2">
             <div class="Item3">
                 <div class="texto-compras3">
+                    <p id="preco-final">Preço final: R$22,90</p>
                     <a href="index.html" class="button3">Finalizar pedido!</a> 
                     <a href="index.html" class="button">Cancelar</a>
                 </div>
@@ -82,8 +83,13 @@
     <footer>
         <div class="rodape">
             <a href="https://www.instagram.com/daffarasburguers.ofc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img class="insta" src="img/insta.png" alt="insta"></a>
-            <p class="descricao">Peça no Delivery: (45) 99803-5494</p>
+            <p class="descricao3">Peça no Delivery: (45) 99803-5494</p>
             <a class="info" href="https://www.google.com/maps/place/R.+Carlos+Welter,+470+-+Vila+Yolanda,+Foz+do+Igua%C3%A7u+-+PR,+85853-290/@-25.5537825,-54.5640197,17z/data=!3m1!4b1!4m6!3m5!1s0x94f69109c08444b5:0xa890d37ee16d125c!8m2!3d-25.5537886!4d-54.5640982!16s%2Fg%2F11bw3hs7wp?entry=ttu&g_ep=EgoyMDI1MTExNi4wIKXMDSoASAFQAw%3D%3D">Daffara's Burger: Rua Carlos Welter, 470 - Vila Yolanda</a>
+            <div id="logos">
+                <img class="brasao1" src="img/ccm_brasao.png" alt="">
+                <img class="wagner" src="img/wagner&sisters.png" alt="">
+                <img class="brasao2" src="img/parana_brasao.png" alt="">
+            </div>
         </div>
     </footer>
 </body>
